# lirs_ros_video_streaming

./: .gitlab-ci.yml  CMakeLists.txt  LICENSE  README.md  package.xml
calib/: right_camera.yaml
calibration/: left_camera.yaml
config/: stereo.yaml
include/lirs_ros_video_streaming/: V4L2Utils.hpp  V4L2VideoCapture.hpp  VideoCapture.hpp
include/lirs_video_stream/: video_stream_api.hpp
include/test/: video_test.h
launch/: all.launch  camera.launch  cameraHz.test  stereo.launch  stereoHz.test  stereo_cameras.launch
src/: V4L2VideoCapture.cpp  VideoStreamer.cpp  publisher.cpp  video_stream.cpp
test/: v4l2_video_capture_test.cpp
