<?xml version="1.0"?>
<package>
    <name>lirs_ros_video_streaming</name>
    <description>Video Streaming ROS Package based on Video4Linux2 API</description>
    <version>1.1.0</version>

    <license>MIT</license>

    <maintainer email="ramilsafnab1996@gmail.com">Ramil Safin</maintainer>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>roscpp</build_depend>
    <build_depend>cv_bridge</build_depend>
    <build_depend>sensor_msgs</build_depend>
    <build_depend>image_transport</build_depend>
    <build_depend>camera_info_manager</build_depend>

    <run_depend>roscpp</run_depend>
    <run_depend>cv_bridge</run_depend>
    <run_depend>sensor_msgs</run_depend>
    <run_depend>image_transport</run_depend>
    <run_depend>camera_info_manager</run_depend>

    <!-- The export tag contains other, unspecified, tags -->
    <export>
        <!-- Other tools can request additional information be placed here -->
    </export>
</package>
